Replace instances of FluentIterable with Java 8 Streams
Guava's FluentIterable was already used in some places to make use of
functional idioms. Now that we have moved to Java 8 we can replace
those with base Java Streams.

Change-Id: I41bce430327020837b6fb3cc053405ab231801ab
Signed-off-by: Alexandre Montplaisir <alexmonthy@voxpopuli.im>
Reviewed-on: https://git.eclipse.org/r/58882
Reviewed-by: Hudson CI
Reviewed-by: Marc-Andre Laperle <marc-andre.laperle@ericsson.com>
Tested-by: Marc-Andre Laperle <marc-andre.laperle@ericsson.com>